// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniProtEvidenceTag components should render ProtVista evidence tag 1`] = `
Array [
  TemplateResult {
    "processor": DefaultTemplateProcessor {},
    "strings": Array [
      "
        <span
          class=",
      "
          @click=",
      "
        >
          ",
      "
          ",
      "</span
        >
      ",
    ],
    "type": "html",
    "values": Array [
      "evidence-tag svg-colour-unreviewed",
      [Function],
      [Function],
      "Imported",
    ],
  },
]
`;

exports[`UniProtEvidenceTag components should render automatic  1`] = `
<DocumentFragment>
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      Imported
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;

exports[`UniProtEvidenceTag components should render automatic annotation 1`] = `
<DocumentFragment>
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;

exports[`UniProtEvidenceTag components should render publications count 1`] = `
<DocumentFragment>
  <button
    aria-controls="<UUID>"
    aria-expanded="false"
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    type="button"
  >
    <svg
      fill="currentColor"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        d="M10 0H0v15l5-5 5 5V0z"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      2 publications
    </span>
  </button>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
    id="<UUID>"
  />
</DocumentFragment>
`;
